Header And Slider Made but not responsive and fix

--- a/src/input.css
+++ b/src/input.css
@@ -1,1 +1,62 @@
-@import "tailwindcss"
+@import "tailwindcss";
+
+@custom-variant dark (&:where(.dark, .dark *));
+
+@theme {
+    --color-dark: #030A1B;
+    --color-primary: #228EE5;
+}
+
+@layer base {
+    i {
+        @apply text-xl text-center
+    }
+
+    a, button {
+        @apply cursor-pointer
+    }
+
+}
+
+@layer components {
+    .swiper-slide {
+        @apply relative;
+    }
+
+    .swiper-slide img {
+        @apply absolute inset-0 w-full h-full object-cover opacity-50;
+    }
+
+    .slide-content {
+        @apply z-10 h-2/5 flex flex-col justify-center items-start px-5 md:px-12 lg:px-20 space-y-6 bottom-0 absolute w-full;
+        max-width: 100%;
+    }
+
+    .slide-content h2 {
+        @apply text-4xl font-bold capitalize;
+    }
+
+    .slide-content p {
+        @apply text-lg w-full leading-7 text-white/80;
+    }
+
+    .slide-buttons {
+        @apply space-x-4 relative flex items-center;
+    }
+
+    .btn-primary {
+        @apply bg-primary hover:brightness-95 px-6 py-2 rounded-2xl flex items-center gap-2;
+    }
+
+    .btn-secondary {
+        @apply text-white px-6 py-2 rounded-2xl flex items-center gap-2 border border-primary;
+    }
+
+    .slide-overlay {
+        @apply w-full h-full absolute top-0 left-0 -z-10 bg-gradient-to-t from-dark via-dark via-dark via-dark via-dark to-transparent;
+    }
+}
+
+.swiper-pagination-bullet {
+    background: #FFF;
+}
